<resources>
    <string name="app_name">To Do List</string>
    <string name="loading">Loading</string>
    <string name="add_a_task">Add a task</string>
    <string name="click_to_add_new_task_in_to_do_list">Click to add new task in to do list</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="task_title">Task Title</string>
    <string name="time">Time</string>
    <string name="please_enter_valid_data">Please enter valid data!</string>
    <string name="please_enter_title">Please enter title!</string>
    <string name="task_list">Task List</string>
    <string name="pending">Pending</string>
    <string name="you_don_t_have_any_tasks_yet_nclick_on_add_button_below_and_add_a_task">You don\'t have any Tasks yet!.\nClick on Add button below and add a task.</string>
    <string name="ok">Ok</string>
    <string name="warning">Warning</string>
    <string name="do_you_want_to_delete_message"><![CDATA[Do you want to delete ---, this action can’t be undone.]]></string>
    <string name="ascending_order">Ascending Order Filter</string>
    <string name="descending_order_filter">Descending Order Filter</string>

    <string-array name="simple_items_am_pm">
        <item>AM</item>
        <item>PM</item>
    </string-array>
</resources>