<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/pink_FEF7FF"
            android:paddingHorizontal="16dp"
            android:paddingVertical="28dp"
            android:text="@string/task_list"
            android:textColor="@color/black_1D1B20"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/frame_rv_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="16dp"
            android:background="@drawable/bg_4_rad_stroke"
            app:layout_constraintBottom_toTopOf="@+id/fab_add_task"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView"
            app:layout_constraintVertical_bias="0.0">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_task_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="5"
                tools:listitem="@layout/item_task" />
        </FrameLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_no_tasks"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="16dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/you_don_t_have_any_tasks_yet_nclick_on_add_button_below_and_add_a_task"
            app:layout_constraintBottom_toTopOf="@+id/fab_add_task"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="20dp"
            android:backgroundTint="@color/pink_ECE6F0"
            android:contentDescription="@string/click_to_add_new_task_in_to_do_list"
            android:src="@drawable/ic_add_plus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>