<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tip_task_title"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:hint="@string/task_title"
            app:boxStrokeColor="@color/gray_79747E"
            app:boxStrokeErrorColor="@android:color/holo_red_dark"
            app:boxStrokeWidth="1dp"
            app:errorTextColor="@android:color/holo_red_dark"
            app:hintTextColor="#49454F"
            app:layout_constraintEnd_toStartOf="@+id/guide_end"
            app:layout_constraintStart_toStartOf="@+id/guide_start"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_task_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black_1D1B20"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tip_time"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/time"
            android:orientation="vertical"
            app:boxStrokeColor="@color/gray_79747E"
            app:boxStrokeWidth="1dp"
            app:layout_constraintEnd_toStartOf="@+id/tip_am_pm"
            app:layout_constraintStart_toStartOf="@+id/guide_start"
            app:layout_constraintTop_toBottomOf="@+id/tip_task_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"
                android:focusableInTouchMode="false"
                android:textColor="@color/black_1D1B20"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tip_am_pm"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:textSize="14sp"
            app:boxStrokeColor="@color/gray_79747E"
            app:boxStrokeWidth="1dp"
            app:endIconDrawable="@drawable/ic_dropdown_arrow"
            app:endIconMode="dropdown_menu"
            app:layout_constraintBottom_toBottomOf="@+id/tip_time"
            app:layout_constraintEnd_toStartOf="@+id/guide_end"
            app:layout_constraintTop_toTopOf="@+id/tip_time">

            <AutoCompleteTextView
                android:id="@+id/auto_text_am_pm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"
                app:simpleItems="@array/simple_items_am_pm"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_cancel"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="102dp"
            android:layout_height="40dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="12dp"
            android:text="@string/cancel"
            android:textAllCaps="true"
            app:layout_constraintEnd_toStartOf="@+id/btn_add_task"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@+id/guide_start"
            app:layout_constraintTop_toBottomOf="@+id/tip_time" />

        <Button
            android:id="@+id/btn_add_task"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/add"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="@+id/btn_cancel"
            app:layout_constraintEnd_toStartOf="@+id/guide_end"
            app:layout_constraintStart_toEndOf="@+id/btn_cancel"
            app:layout_constraintTop_toTopOf="@+id/btn_cancel" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="36dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="36dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>